adding initial markdown

--- a/public/app/home/views/index.html
+++ b/public/app/home/views/index.html
@@ -1,185 +1,106 @@
-﻿<div class="alert alert-success fade in">
-    <button class="close" data-dismiss="alert">×</button>
-    <i class="fa-fw fa fa-info"></i>
-    <strong>Info!</strong> {{vm.message}}
-</div>
-
-<h5 class="row-title">{{vm.title}}</h5>
-
-<div kendo-grid="grid" id="grid" options="vm.leadGridOptions">
-    <style scoped>
-        .circle {
-            width: 20px;
-            height: 20px;
-            -moz-border-radius: 10px;
-            -webkit-border-radius: 10px;
-            border-radius: 10px;
-        }
-
-        .k-tabstrip {
-            border-style: none;
-            border-width: 0;
-        }
-
-        ul {
-            padding-left: 0;
-            list-style: none;
-        }
-
-        .k-grid-content {
-            min-height: 200px;
-        }
-
-        .k-grid .k-grid-header .k-header .k-link {
-            height: auto;
-        }
-
-        .k-grid .k-grid-header .k-header {
-            white-space: normal;
-        }
-    </style>
-    <div k-detail-template>
-        <div kendo-tabstrip>
-            <ul>
-                <li class="k-state-active">Lead Details</li>
-            </ul>
-            <div class="row" style="padding-top: 25px">
-                <div class="col-xs-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Property Information
-                        </div>
-                        <div class="panel-body">
-                            <ul>
-                                <li>
-                                    <strong>Lot:</strong> {{dataItem.detailRow.PropertyLot}}
-                                </li>
-                                <li>
-                                    <strong>Tract:</strong> {{dataItem.detailRow.PropertyTract}}
-                                </li>
-                                <li>
-                                    <strong>Property Address:</strong> {{dataItem.detailRow.PropertyAddress}}, {{dataItem.detailRow.PropertyCity}}, {{dataItem.detailRow.PropertyState}}. {{dataItem.detailRow.PropertyPostalCode}}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Property Price:</strong> $ {{dataItem.detailRow.PropertyPrice}}
-                                </li>
-                                <li>
-                                    <strong>Cash Available:</strong> $ {{dataItem.detailRow.CashAvailable}}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Buyers Married:</strong> {{dataItem.detailRow.BuyersMarried == true ? 'Yes' : 'No' }}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Community:</strong> {{dataItem.detailRow.Community.Name}}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Velocify Ref:</strong> {{dataItem.detailRow.VelocifyRefId}}
-                                </li>
-                                <li>
-                                    <strong>Mortgage Professional:</strong> {{dataItem.detailRow.Community.MortgageProfessional}}
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Buyer 1 Information
-                        </div>
-                        <div class="panel-body" ng-if="dataItem.detailRow.Applicants[0] != null">
-                            <ul>
-                                <li>
-                                    <strong>Name:</strong> {{dataItem.detailRow.Applicants[0].FirstName}} {{dataItem.detailRow.Applicants[0].LastName}}
-                                </li>
-                                <li>
-                                    <strong>Address:</strong> {{dataItem.detailRow.Applicants[0].Address1}} {{dataItem.detailRow.Applicants[0].Address2}}, {{dataItem.detailRow.Applicants[0].City}}, {{dataItem.detailRow.Applicants[0].State}}. {{dataItem.detailRow.Applicants[0].Zip}}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Home Phone:</strong> {{dataItem.detailRow.Applicants[0].HomePhone}}
-                                </li>
-                                <li>
-                                    <strong>Work Phone:</strong> {{dataItem.detailRow.Applicants[0].BusinessPhone}}
-                                </li>
-                                <li>
-                                    <strong>Cell Phone:</strong> {{dataItem.detailRow.Applicants[0].MobilePhone}}
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="panel-body" ng-if="dataItem.detailRow.Applicants[0] == null">
-                            Buyer Information Not Available
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Buyer 2 Information
-                        </div>
-                        <div class="panel-body" ng-if="dataItem.detailRow.Applicants[1] != null">
-                            <ul>
-                                <li>
-                                    <strong>Name:</strong> {{dataItem.detailRow.Applicants[1].FirstName}} {{dataItem.detailRow.Applicants[1].LastName}}
-                                </li>
-                                <li>
-                                    <strong>Address:</strong> {{dataItem.detailRow.Applicants[1].Address1}} {{dataItem.detailRow.Applicants[1].Address2}}, {{dataItem.detailRow.Applicants[1].City}}, {{dataItem.detailRow.Applicants[1].State}}. {{dataItem.detailRow.Applicants[1].Zip}}
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <strong>Home Phone:</strong> {{dataItem.detailRow.Applicants[1].HomePhone}}
-                                </li>
-                                <li>
-                                    <strong>Work Phone:</strong> {{dataItem.detailRow.Applicants[1].BusinessPhone}}
-                                </li>
-                                <li>
-                                    <strong>Cell Phone:</strong> {{dataItem.detailRow.Applicants[1].MobilePhone}}
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="panel-body" ng-if="dataItem.detailRow.Applicants[1] == null">
-                            Buyer Information Not Available
-                        </div>
-                    </div>
-                </div>
+﻿<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="/images/ASP-NET-Banners-01.png" alt="ASP.NET" class="img-responsive" />
+            <div class="carousel-caption">
+                <p>
+                    Learn how to build ASP.NET apps that can run anywhere.
+                    <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
             </div>
-
+        </div>
+        <div class="item">
+            <img src="/images/Banner-02-VS.png" alt="Visual Studio" class="img-responsive" />
+            <div class="carousel-caption">
+                <p>
+                    There are powerful new features in Visual Studio for building modern web apps.
+                    <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/ASP-NET-Banners-02.png" alt="Package Management" class="img-responsive" />
+            <div class="carousel-caption">
+                <p>
+                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
+                    <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/Banner-01-Azure.png" alt="Microsoft Azure" class="img-responsive" />
+            <div class="carousel-caption">
+                <p>
+                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
+                    <a class="btn btn-default btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
+                        Learn More
+                    </a>
+                </p>
+            </div>
         </div>
     </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
-<script id="toolbar" type="text/x-kendo-template">
-    <div style="padding:5px" class="pull-right">
-        Start: <input kendo-date-picker
-                      ng-model="vm.fromDateString"
-                      k-ng-model="vm.fromDateObject" />        
-        &nbsp;&nbsp;
-        End: <input kendo-date-picker
-                    ng-model="vm.toDateString"
-                    k-ng-model="vm.toDateObject" />        
-        &nbsp;<button class="btn btn-primary" ng-click="vm.search()" ng-disabled="!vm.fromDateString || !vm.toDateString">Search</button>
-        &nbsp;<button class="btn btn-primary" ng-click="vm.clear()">Clear</button>
+<div class="row">
+    <div class="col-md-3">
+        <h2>Application uses</h2>
+        <ul>
+            <li>Sample pages using ASP.NET MVC 6</li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518007">Gulp</a> and <a href="http://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
+            <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
+        </ul>
     </div>
-</script>
-
-<script id="ficoTemplate" type="text/x-kendo-template">
-    #
-    if(data.FicoRange == 'LOW') {#
-    <div class="circle" style="background: red;"></div>
-    # } if(data.FicoRange == 'MEDIUM') { #
-    <div class="circle" style="background: orange;"></div>
-    # } if(data.FicoRange == 'HIGH') { #
-    <div class="circle" style="background: green;"></div>
-    # } #
-</script>
-
+    <div class="col-md-3">
+        <h2>How to</h2>
+        <ul>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699314">Add an appsetting in config and access it in app.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+        </ul>
+    </div>
+    <div class="col-md-3">
+        <h2>Overview</h2>
+        <ul>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET 5</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET 5 such as Startup and middleware.</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
+        </ul>
+    </div>
+    <div class="col-md-3">
+        <h2>Run & Deploy</h2>
+        <ul>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517852">Run your app on .NET Core</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517853">Run commands in your project.json</a></li>
+            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
+        </ul>
+    </div>
+</div>
